# LANScape

./: .gitignore  LICENSE  README.md  config.json  meson.build  vcpkg.ini  vcpkg.json  winbuild.ps1
registry/: install.reg.in  lanscape.service.in  meson.build  sidebar_install.reg.in  sidebar_uninstall.reg.in  uninstall.reg.in
src/: client.cpp  configuration.cpp  meson.build  server.cpp  shellext.cpp  shellext.def
src/include/: configuration.hpp  shellext.hpp
